# fcml-lib

./: .cproject  .gitignore  .hgignore  .project  .travis.yml  0  AUTHORS  ChangeLog  Dockerfile  Makefile.am  NEWS  README  README.md  SOLUTIONS.txt  \  asm_todo.txt  build.bat  build.sh  co_strawdzamy.txt  coll_t.h  common.c  common.h  conditionals.txt  configure.ac  configure_cflags.sh  docker-compose.yml  documentation.txt  fcml.h  fcml_apc_ast.c  fcml_apc_ast.h  fcml_asm_decoding.c  fcml_asm_decoding.h  fcml_asm_decoding_tree.c  fcml_asm_decoding_tree.h  fcml_asm_dialect.c  fcml_asm_dialect.h  fcml_asm_dialect_intel.c  fcml_asm_dialect_intel.h  fcml_asm_encoding.c  fcml_asm_encoding.h  (+219 more)
check/: .gitignore  Makefile.am  chooser_t.c  chooser_t.h  coll_t.c  error_handling_t.c  error_handling_t.h  fcml_stf.c  fcml_stf.h  gas_parser_t.c  hints_t.c  instructions_a_t.c  instructions_b_t.c  instructions_base_t.c  instructions_base_t.h  instructions_c_t.c  instructions_d_t.c  instructions_e_t.c  instructions_f_t.c  instructions_f_t.h  instructions_g_t.c  instructions_h_t.c  instructions_i_t.c  instructions_j_t.c  instructions_j_t.h  instructions_l_t.c  instructions_l_t.h  instructions_m_t.c  instructions_n_t.c  instructions_n_t.h  instructions_o_t.c  instructions_o_t.h  instructions_p_t.c  instructions_p_t.h  instructions_r_t.c  instructions_r_t.h  instructions_s_t.c  instructions_s_t.h  instructions_t_t.c  instructions_t_t.h  (+17 more)
check/cpp-tests/: .gitignore  Makefile.am  assembler_t.cpp  assembler_t.hpp  avx512_t.cpp  avx512_t.hpp  common_t.cpp  common_t.hpp  dialect_t.cpp  dialect_t.hpp  disassembler_t.cpp  disassembler_t.hpp  errors_t.cpp  errors_t.hpp  main.cpp  parser_t.cpp  parser_t.hpp  struct_wrapper_t.cpp  struct_wrapper_t.hpp
check/internal-tests/: .gitignore  Makefile.am  ceh_t.c  ceh_t.h  coll_t.c  coll_t.h  common_utils_t.c  common_utils_t.h  env_t.c  env_t.h  gas_parser_t.c  gas_parser_t.h  instruction_chooser_t.c  instruction_chooser_t.h  intel_parser_t.c  intel_parser_t.h  lag_assembler_t.c  lag_assembler_t.h  main.c  mnemonic_parser_t.c  mnemonic_parser_t.h  modrm_decoder_t.c  modrm_decoder_t.h  modrm_encoder_t.c  modrm_encoder_t.h  stream_t.c  stream_t.h  symbols_t.c  symbols_t.h  utils_t.c  utils_t.h
check/public-tests/: .gitignore  Makefile.am  assembler_t.c  assembler_t.h  chooser_t.c  chooser_t.h  disassembler_t.c  disassembler_t.h  error_handling_t.c  error_handling_t.h  general_usage_t.c  general_usage_t.h  hints_t.c  hints_t.h  instructions_a_t.c  instructions_a_t.h  instructions_b_t.c  instructions_b_t.h  instructions_base_t.c  instructions_base_t.h  instructions_c_t.c  instructions_c_t.h  instructions_d_t.c  instructions_d_t.h  instructions_e_t.c  instructions_e_t.h  instructions_f_t.c  instructions_f_t.h  instructions_g_t.c  instructions_g_t.h  instructions_h_t.c  instructions_h_t.h  instructions_i_t.c  instructions_i_t.h  instructions_j_t.c  instructions_j_t.h  instructions_k_t.c  instructions_k_t.h  instructions_l_t.c  instructions_l_t.h  (+29 more)
check/stf/: .gitignore  Makefile.am  fcml_stf.c  fcml_stf.h
include/: Makefile.am  fcml_assembler.h  fcml_assembler.hpp  fcml_ceh.h  fcml_choosers.h  fcml_common.h  fcml_common.hpp  fcml_common_utils.h  fcml_dialect.h  fcml_dialect.hpp  fcml_disassembler.h  fcml_disassembler.hpp  fcml_env.h  fcml_errors.h  fcml_errors.hpp  fcml_gas_dialect.h  fcml_gas_dialect.hpp  fcml_gas_mnemonics.cpp  fcml_gas_mnemonics.h  fcml_gas_mnemonics.hpp  fcml_instructions.h  fcml_intel_dialect.h  fcml_intel_dialect.hpp  fcml_intel_mnemonics.cpp  fcml_intel_mnemonics.h  fcml_intel_mnemonics.hpp  fcml_lag_assembler.h  fcml_lag_assembler.hpp  fcml_lib_export.h  fcml_optimizers.h  fcml_parser.h  fcml_parser.hpp  fcml_registers.cpp  fcml_registers.hpp  fcml_rend.h  fcml_renderer.h  fcml_renderer.hpp  fcml_stateful_assembler.hpp  fcml_stateful_disassembler.hpp  fcml_stream.h  (+3 more)
src/: Makefile.am  fcml_apc_ast.c  fcml_apc_ast.h  fcml_assembler.c  fcml_assembler_int.h  fcml_ceh.c  fcml_ceh.h  fcml_choosers.c  fcml_coll.c  fcml_coll.h  fcml_common_dialect.c  fcml_common_dialect.h  fcml_common_lex.h  fcml_common_utils.c  fcml_decoding_tree.c  fcml_decoding_tree.h  fcml_def.c  fcml_def.h  fcml_def_enc.c  fcml_dialect.c  fcml_dialect_int.c  fcml_dialect_int.h  fcml_disassembler.c  fcml_disp8_n.c  fcml_disp8_n.h  fcml_encoding.c  fcml_encoding.h  fcml_env.c  fcml_env.h  fcml_env_int.c  fcml_env_int.h  fcml_errors.h  fcml_gas_dialect.c  fcml_gas_lexer.c  fcml_gas_lexer.h  fcml_gas_lexer.l  fcml_gas_lexerfcml_gas_lexer.c  fcml_gas_parser.c  fcml_gas_parser.h  fcml_gas_parser.tab.c  (+50 more)
src/.libs/: libfcml.so.0  libfcml.so.0.0.0
win32/: .gitignore  Makefile.am  dist.bat
win32/vs2008/fcml/: .gitignore  fcml.sln
win32/vs2008/fcml/fcml/: .gitignore  fcml.aps  fcml.def  fcml.rc  fcml.vcproj  resource.h  resource1.h
win32/vs2008/fcml/fcml-check/: .gitignore  fcml-check.vcproj  stdafx.h
win32/vs2008/fcml/fcml-check-cpp/: fcml-check-cpp.vcproj
win32/vs2010/fcml/: .gitignore  fcml.sln
win32/vs2010/fcml/fcml/: dllmain.c  fcml.def  fcml.rc  fcml.vcxproj  fcml.vcxproj.filters
win32/vs2010/fcml/fcml-check/: fcml-check.vcxproj  fcml-check.vcxproj.filters
win32/vs2010/fcml/fcml-check-cpp/: fcml-check-cpp.vcxproj  fcml-check-cpp.vcxproj.filters
win32/vs2013/fcml/fcml/: fcml.def  fcml.vcxproj
win32/vs2013/fcml/fcml-check/: fcml-check.vcxproj  fcml-check.vcxproj.filters
win32/vs2013/fcml/fcml-check-cpp/: fcml-check-cpp.vcxproj  fcml-check-cpp.vcxproj.filters
win32/vs2015/fcml/: fcml.sln
win32/vs2015/fcml/fcml/: dllmain.c  fcml.def  fcml.rc  fcml.vcxproj
win32/vs2015/fcml/fcml-check/: fcml-check.vcxproj
win32/vs2015/fcml/fcml-check-cpp/: fcml-check-cpp.vcxproj  fcml-check-cpp.vcxproj.filters
win32/vs2017/fcml/: .gitignore
win32/vs2017/fcml/fcml/: fcml.def  fcml.rc  fcml.vcxproj  fcml.vcxproj.filters
win32/vs2017/fcml/fcml-check/: fcml-check.vcxproj  fcml-check.vcxproj.filters
win32/vs2017/fcml/fcml-check-cpp/: fcml-check-cpp.vcxproj
win32/vs2019/fcml/fcml-check-cpp/: fcml-check-cpp.vcxproj
win32/vs2022/fcml/: .gitignore  fcml.sln
(+85 files in other folders)
