
ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = win32/dist.bat \
	win32/vs2008/fcml/fcml-check/fcml-check.vcproj \
	win32/vs2008/fcml/fcml-check-cpp/fcml-check-cpp.vcproj \
	win32/vs2008/fcml/fcml.sln \
	win32/vs2008/fcml/fcml/dllmain.c \
	win32/vs2008/fcml/fcml/fcml.def \
	win32/vs2008/fcml/fcml/fcml.rc \
	win32/vs2008/fcml/fcml/fcml.vcproj \
	win32/vs2008/fcml/fcml/resource.h \
	win32/vs2008/fcml/fcml/resource1.h \
	win32/vs2008/fcml/examples/hsdis/dllmain.cpp \
	win32/vs2008/fcml/examples/hsdis/hsdis.def \
	win32/vs2008/fcml/examples/hsdis/hsdis.rc \
	win32/vs2008/fcml/examples/hsdis/resource.h \
	win32/vs2008/fcml/examples/hsdis/hsdis.vcproj \
	win32/vs2008/fcml/examples/hsdis/targetver.h \
	win32/vs2008/fcml/examples/hsdis/COPYING \
	win32/vs2010/fcml/fcml-check/fcml-check.vcxproj \
	win32/vs2010/fcml/fcml-check/fcml-check.vcxproj.filters \
	win32/vs2010/fcml/fcml-check-cpp/fcml-check-cpp.vcxproj \
	win32/vs2010/fcml/fcml-check-cpp/fcml-check-cpp.vcxproj.filters \
	win32/vs2010/fcml/fcml.sln \
	win32/vs2010/fcml/fcml/dllmain.c \
	win32/vs2010/fcml/fcml/fcml.def \
	win32/vs2010/fcml/fcml/fcml.rc \
	win32/vs2010/fcml/fcml/fcml.vcxproj \
	win32/vs2010/fcml/fcml/fcml.vcxproj.filters \
	win32/vs2010/fcml/fcml/resource.h \
	win32/vs2010/fcml/fcml/resource1.h \
	win32/vs2010/fcml/examples/hsdis/dllmain.cpp \
	win32/vs2010/fcml/examples/hsdis/hsdis.def \
	win32/vs2010/fcml/examples/hsdis/hsdis.rc \
	win32/vs2010/fcml/examples/hsdis/resource.h \
	win32/vs2010/fcml/examples/hsdis/hsdis.vcxproj \
	win32/vs2010/fcml/examples/hsdis/hsdis.vcxproj.filters \
	win32/vs2010/fcml/examples/hsdis/targetver.h \
	win32/vs2010/fcml/examples/hsdis/COPYING \
	win32/vs2013/fcml/fcml-check/fcml-check.vcxproj \
	win32/vs2013/fcml/fcml-check/fcml-check.vcxproj.filters \
	win32/vs2013/fcml/fcml-check-cpp/fcml-check-cpp.vcxproj \
	win32/vs2013/fcml/fcml-check-cpp/fcml-check-cpp.vcxproj.filters \
	win32/vs2013/fcml/fcml.sln \
	win32/vs2013/fcml/fcml/dllmain.c \
	win32/vs2013/fcml/fcml/fcml.def \
	win32/vs2013/fcml/fcml/fcml.rc \
	win32/vs2013/fcml/fcml/fcml.vcxproj \
	win32/vs2013/fcml/fcml/fcml.vcxproj.filters \
	win32/vs2013/fcml/fcml/resource.h \
	win32/vs2013/fcml/fcml/resource1.h \
	win32/vs2013/fcml/examples/hsdis/dllmain.cpp \
	win32/vs2013/fcml/examples/hsdis/hsdis.def \
	win32/vs2013/fcml/examples/hsdis/hsdis.rc \
	win32/vs2013/fcml/examples/hsdis/resource.h \
	win32/vs2013/fcml/examples/hsdis/hsdis.vcxproj \
	win32/vs2013/fcml/examples/hsdis/hsdis.vcxproj.filters \
	win32/vs2013/fcml/examples/hsdis/targetver.h \
	win32/vs2013/fcml/examples/hsdis/COPYING

if HAVE_DOXYGEN
DOXYDIR = docs/doxygen
endif

SUBDIRS = include src check example $(DOXYDIR)
