
ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = win32/dist.bat \
	win32/vs2008/fcml/fcml-check/fcml-check.vcproj \
	win32/vs2008/fcml/fcml-check-cpp/fcml-check-cpp.vcproj \
	win32/vs2008/fcml/fcml.sln \
	win32/vs2008/fcml/fcml/dllmain.c \
	win32/vs2008/fcml/fcml/fcml.def \
	win32/vs2008/fcml/fcml/fcml.rc \
	win32/vs2008/fcml/fcml/fcml.vcproj \
	win32/vs2008/fcml/fcml/resource.h \
	win32/vs2008/fcml/fcml/resource1.h \
	win32/vs2008/fcml/examples/hsdis/dllmain.cpp \
	win32/vs2008/fcml/examples/hsdis/hsdis.def \
	win32/vs2008/fcml/examples/hsdis/hsdis.rc \
	win32/vs2008/fcml/examples/hsdis/resource.h \
	win32/vs2008/fcml/examples/hsdis/hsdis.vcproj \
	win32/vs2008/fcml/examples/hsdis/targetver.h \
	win32/vs2010/fcml/fcml-check/fcml-check.vcxproj \
	win32/vs2010/fcml/fcml-check/fcml-check.vcxproj.filters \
	win32/vs2010/fcml/fcml-check-cpp/fcml-check-cpp.vcxproj \
	win32/vs2010/fcml/fcml-check-cpp/fcml-check-cpp.vcxproj.filters \
	win32/vs2010/fcml/fcml.sln \
	win32/vs2010/fcml/fcml/dllmain.c \
	win32/vs2010/fcml/fcml/fcml.def \
	win32/vs2010/fcml/fcml/fcml.rc \
	win32/vs2010/fcml/fcml/fcml.vcxproj \
	win32/vs2010/fcml/fcml/fcml.vcxproj.filters \
	win32/vs2010/fcml/fcml/resource.h \
	win32/vs2010/fcml/fcml/resource1.h \
	win32/vs2010/fcml/examples/hsdis/dllmain.cpp \
	win32/vs2010/fcml/examples/hsdis/hsdis.def \
	win32/vs2010/fcml/examples/hsdis/hsdis.rc \
	win32/vs2010/fcml/examples/hsdis/resource.h \
	win32/vs2010/fcml/examples/hsdis/hsdis.vcxproj \
	win32/vs2010/fcml/examples/hsdis/hsdis.vcxproj.filters \
	win32/vs2010/fcml/examples/hsdis/targetver.h \
	win32/vs2013/fcml/fcml-check/fcml-check.vcxproj \
	win32/vs2013/fcml/fcml-check/fcml-check.vcxproj.filters \
	win32/vs2013/fcml/fcml-check-cpp/fcml-check-cpp.vcxproj \
	win32/vs2013/fcml/fcml-check-cpp/fcml-check-cpp.vcxproj.filters \
	win32/vs2013/fcml/fcml.sln \
	win32/vs2013/fcml/fcml/dllmain.c \
	win32/vs2013/fcml/fcml/fcml.def \
	win32/vs2013/fcml/fcml/fcml.rc \
	win32/vs2013/fcml/fcml/fcml.vcxproj \
	win32/vs2013/fcml/fcml/fcml.vcxproj.filters \
	win32/vs2013/fcml/fcml/resource.h \
	win32/vs2013/fcml/fcml/resource1.h \
	win32/vs2013/fcml/examples/hsdis/dllmain.cpp \
	win32/vs2013/fcml/examples/hsdis/hsdis.def \
	win32/vs2013/fcml/examples/hsdis/hsdis.rc \
	win32/vs2013/fcml/examples/hsdis/resource.h \
	win32/vs2013/fcml/examples/hsdis/hsdis.vcxproj \
	win32/vs2013/fcml/examples/hsdis/hsdis.vcxproj.filters \
	win32/vs2013/fcml/examples/hsdis/targetver.h \
	win32/vs2015/fcml/examples/hsdis/dllmain.cpp \
	win32/vs2015/fcml/examples/hsdis/hsdis.def \
	win32/vs2015/fcml/examples/hsdis/hsdis.rc \
	win32/vs2015/fcml/examples/hsdis/hsdis.vcxproj \
	win32/vs2015/fcml/examples/hsdis/hsdis.vcxproj.filters \
	win32/vs2015/fcml/examples/hsdis/resource.h \
	win32/vs2015/fcml/examples/hsdis/targetver.h \
	win32/vs2015/fcml/fcml-check-cpp/fcml-check-cpp.vcxproj \
	win32/vs2015/fcml/fcml-check-cpp/fcml-check-cpp.vcxproj.filters \
	win32/vs2015/fcml/fcml-check/fcml-check.vcxproj \
	win32/vs2015/fcml/fcml-check/fcml-check.vcxproj.filters \
	win32/vs2015/fcml/fcml.sln \
	win32/vs2015/fcml/fcml/dllmain.c \
	win32/vs2015/fcml/fcml/fcml.def \
	win32/vs2015/fcml/fcml/fcml.rc \
	win32/vs2015/fcml/fcml/fcml.vcxproj \
	win32/vs2015/fcml/fcml/fcml.vcxproj.filters \
	win32/vs2015/fcml/fcml/resource.h \
	win32/vs2015/fcml/fcml/resource1.h \
	dev-tools/fcml-flags-calculator/fcml-flags-calc.csproj \
	dev-tools/fcml-flags-calculator/fcml-flags-calc.sln \
	dev-tools/fcml-flags-calculator/fcml-flags-calc.suo \
	dev-tools/fcml-flags-calculator/FormFCMLFlagCalculator.cs \
	dev-tools/fcml-flags-calculator/FormFCMLFlagCalculator.Designer.cs \
	dev-tools/fcml-flags-calculator/FormFCMLFlagCalculator.resx \
	dev-tools/fcml-flags-calculator/Program.cs \
	dev-tools/fcml-flags-calculator/Properties/AssemblyInfo.cs \
	dev-tools/fcml-flags-calculator/Properties/Resources.Designer.cs \
	dev-tools/fcml-flags-calculator/Properties/Resources.resx \
	dev-tools/fcml-flags-calculator/Properties/Settings.Designer.cs \
	dev-tools/fcml-flags-calculator/Properties/Settings.settings

if HAVE_DOXYGEN
DOXYDIR = docs/doxygen
endif

SUBDIRS = include src check example $(DOXYDIR)

docker-build:
	@echo 'Building an image for dockerized unit tests.'
	docker-compose -f docker-compose.yml build

docker-tests: docker-build
	@echo 'Running the dockerized unit tests.'
	docker-compose -f docker-compose.yml run --rm tests
