pkginclude_HEADERS = fcml_assembler.h \
	fcml_errors.h \
	fcml_choosers.h \
	fcml_common.h \
	fcml_common_utils.h \
	fcml_dialect.h \
	fcml_disassembler.h \
	fcml_gas_dialect.h \
	fcml_intel_dialect.h \
	fcml_optimizers.h \
	fcml_parser.h \
	fcml_renderer.h \
	fcml_types.h \
	fcml_lib_export.h \
	fcml_lag_assembler.h \
	fcml_symbols.h \
	fcml_instructions.h

